# peppertodo

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  manager.rs  task.rs  task_manager.rs
src/manager/: mod.rs  task.rs
src/task/: mod.rs
tests/: integration_tests.rs
