[package]
name = "peppertodo"
version = "0.3.0"
description = "A todo list CLI application"
edition = "2021"
documentation = "https://github.com/pepperjackdev/todo/blob/master/README.md"
repository = "https://github.com/pepperjackdev/todo"
homepage = "https://github.com/pepperjackdev/todo"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5.16", features = ["cargo", "string"] }
dirs = "5.0.1"
rusqlite = { version = "0.32.1", features = ["bundled"]}

[[bin]]
name = "pt" # setting a short alias for the utily
path = "src/main.rs"