[package]
name = "peppertodo"
version = "0.3.1"
description = "A todo list CLI application"
edition = "2021"
documentation = "https://github.com/pepperjackdev/peppertodo/blob/master/README.md"
repository = "https://github.com/pepperjackdev/peppertodo"
homepage = "https://github.com/pepperjackdev/peppertodo"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5.16", features = ["cargo", "string"] }
dirs = "5.0.1"
rusqlite = { version = "0.32.1", features = ["bundled"]}

[[bin]]
name = "pt" # setting a short alias for the utily
path = "src/main.rs"