[package]
name = "peppertodo"
version = "0.4.0"
description = "A todo list CLI application"
edition = "2021"
documentation = "https://github.com/pepperjackdev/peppertodo/blob/master/README.md"
repository = "https://github.com/pepperjackdev/peppertodo"
homepage = "https://github.com/pepperjackdev/peppertodo"
license = "GPL-3.0-only"
authors = ["Giacomo De Florio (@pepperjackdev)"]

[dependencies]
clap = { version = "4.5.16", features = ["cargo", "derive", "string"] }
dirs = "5.0.1"
rusqlite = { version = "0.32.1", features = ["bundled"]}

[[bin]]
name = "pt"
path = "src/main.rs"
